# CosmicGATE-programs

./: LICENSE  README.md
orchestrator/: Cargo.toml
orchestrator/src/: lib.rs  program_error.rs
orchestrator/src/account_data/: mod.rs  node.rs  state.rs  task.rs  test.rs
orchestrator/src/instructions/: assign_task.rs  initialize.rs  mod.rs  register_node.rs  test_instruct.rs  update_task.rs
orchestrator/src/processors/: add_task.rs  initialize.rs  mod.rs  register_node.rs  test.rs  update_task.rs
staking-reward/: Cargo.toml
staking-reward/src/: lib.rs
staking-reward/src/instructions/: mod.rs  orchestrator.rs  rewards.rs  staking.rs
staking-reward/src/state/: creator.rs  errors.rs  mod.rs  node.rs  orchestrator.rs  rpool.rs  stake.rs  task.rs
