[package]
name = "cosmicgate-sol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cosmicgate_sol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed", "event-cpi"] }
anchor-spl = { version = "0.30.1", features = ["token", "token_2022"] }
anchor-safe-math = "0.5.1"
rust_decimal = { version = "1.36.0", features = ["maths"] }
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }
sha2 = "0.10.1"
proc-macro2 = "1.0.94"